<resources>
    <string name="app_name">MovieTime</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="see_all">See all</string>
    <string name="storyline">Storyline</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trailers">Trailers</string>
    <string name="similar">Similar</string>
    <string name="now_playing">Now Playing</string>
    <string name="movie_string">Movie</string>
    <string name="d_movie_name">Pirates of the Caribbean: Dead Men Tell No Tales</string>
    <string name="score">Score</string>
    <string name="movies_score">6.6</string>
    <string name="year">2017</string>
    <string name="favorite">Favorite</string>
    <string name="play_trailer">Trailer</string>
    <string name="unfavorite">Favorited</string>
    <string name="detail">Detail</string>
    <string name="more">More</string>
    <string name="synopsis">Synopsis</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="genres">Fantasy, Family, Romance</string>
</resources>
