<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8dp">


        <android.support.v7.widget.CardView
            android:id="@+id/list_movies_main_poster_card"
            android:layout_width="120dp"
            android:layout_height="175dp"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:elevation="@dimen/dimen_2dp"
            app:cardBackgroundColor="@color/colorImagePlaceholder"
            app:cardCornerRadius="@dimen/dimen_8dp"
            app:cardElevation="@dimen/dimen_4dp"
            app:cardUseCompatPadding="true" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignEnd="@id/list_movies_main_poster_card"
            android:layout_alignStart="@id/list_movies_main_poster_card"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="@dimen/dimen_4dp"
            app:cardElevation="@dimen/dimen_6dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/roboto"
                    android:text="@string/score"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_12sp" />

                <TextView
                    android:id="@+id/list_movies_main_score_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="11dp"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/movies_score"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <TextView
            android:id="@+id/list_movies_main_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/list_movies_main_poster_card"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:layout_toEndOf="@id/list_movies_main_poster_card"
            android:elevation="@dimen/dimen_2dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/d_movie_name"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:background="@color/light_grey" />


</LinearLayout>