<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.DetailActivity">


    <io.codetail.widget.RevealFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/activity_detail_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/content_detail_zoom" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/activity_detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/transparent"
                    android:elevation="2dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:contentInsetStartWithNavigation="0dp"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                <RelativeLayout
                    android:id="@+id/activity_detail_background_layout"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:alpha="0.9" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignBottom="@id/activity_detail_background_layout"
                    android:background="@drawable/gradient" />

                <android.support.v7.widget.CardView
                    android:id="@+id/activity_detail_content_card"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_100dp"
                    android:elevation="1dp"
                    app:cardCornerRadius="@dimen/dimen_16dp" />

                <android.support.v7.widget.CardView
                    android:id="@+id/activity_detail_poster_card"
                    android:layout_width="120dp"
                    android:layout_height="175dp"
                    android:layout_marginStart="@dimen/dimen_32dp"
                    android:layout_marginTop="72dp"
                    android:elevation="2dp"
                    android:transitionName="name"
                    app:cardBackgroundColor="@color/colorImagePlaceholder"
                    app:cardCornerRadius="@dimen/dimen_8dp"
                    app:cardElevation="@dimen/dimen_8dp" />

                <android.support.v7.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignEnd="@id/activity_detail_content_card"
                    android:layout_alignTop="@id/activity_detail_poster_card"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="@dimen/dimen_4dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/roboto_light"
                            android:text="@string/score"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_10sp" />

                        <TextView
                            android:id="@+id/activity_detail_score_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/roboto_black"
                            android:text="@string/movies_score"
                            android:textColor="@color/white"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/activity_detail_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/activity_detail_content_card"
                    android:layout_alignTop="@id/activity_detail_poster_card"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginTop="60dp"
                    android:layout_toEndOf="@id/activity_detail_poster_card"
                    android:elevation="@dimen/dimen_2dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/d_movie_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_detail_genres_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/activity_detail_content_card"
                    android:layout_below="@id/activity_detail_title_text_view"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_toEndOf="@id/activity_detail_poster_card"
                    android:elevation="@dimen/dimen_2dp"
                    android:fontFamily="@font/roboto"
                    android:text="Genres"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/activity_detail_year_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/activity_detail_genres_text"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:layout_toEndOf="@id/activity_detail_poster_card"
                    android:elevation="@dimen/dimen_2dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/year"
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/activity_detail_buttons_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/activity_detail_content_card"
                    android:layout_alignStart="@id/activity_detail_content_card"
                    android:layout_below="@id/activity_detail_poster_card"
                    android:elevation="@dimen/dimen_2dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:id="@+id/activity_detail_play_trailer_card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_16dp"
                        android:layout_weight="1"
                        android:foreground="@drawable/ripple"
                        android:orientation="horizontal"
                        app:cardBackgroundColor="@color/teal_blue"
                        app:cardCornerRadius="@dimen/dimen_20dp"
                        app:cardUseCompatPadding="true">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dimen_14dp"
                            android:paddingEnd="@dimen/dimen_10dp"
                            android:paddingStart="@dimen/dimen_10dp"
                            android:paddingTop="@dimen/dimen_14dp">

                            <ImageView
                                android:id="@+id/playIcon"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="@dimen/dimen_4dp"
                                android:src="@drawable/ic_play" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="@dimen/dimen_8dp"
                                android:layout_toEndOf="@id/playIcon"
                                android:text="@string/play_trailer"
                                android:textColor="@color/white"
                                android:textSize="14sp" />
                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/activity_detail_favorite_card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_16dp"
                        android:layout_weight="1"
                        android:foreground="@drawable/ripple"
                        android:orientation="horizontal"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/dimen_20dp"
                        app:cardUseCompatPadding="true">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dimen_14dp"
                            android:paddingEnd="@dimen/dimen_10dp"
                            android:paddingStart="@dimen/dimen_10dp"
                            android:paddingTop="@dimen/dimen_14dp">

                            <ImageView
                                android:id="@+id/favIcon"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="@dimen/dimen_4dp"
                                android:src="@drawable/ic_favorite" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="@dimen/dimen_8dp"
                                android:layout_toEndOf="@id/favIcon"
                                android:text="@string/favorite"
                                android:textColor="@color/dove_black"
                                android:textSize="14sp" />
                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/activity_detail_unfavorite_card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_16dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        app:cardBackgroundColor="@color/yellow_accent"
                        app:cardCornerRadius="@dimen/dimen_20dp"
                        app:cardUseCompatPadding="true">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dimen_14dp"
                            android:paddingEnd="@dimen/dimen_10dp"
                            android:paddingStart="@dimen/dimen_10dp"
                            android:paddingTop="@dimen/dimen_14dp">

                            <ImageView
                                android:id="@+id/unfavIcon"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="@dimen/dimen_4dp"
                                android:src="@drawable/ic_unvaforite" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="@dimen/dimen_8dp"
                                android:layout_toEndOf="@id/unfavIcon"
                                android:text="@string/unfavorite"
                                android:textColor="@color/white"
                                android:textSize="14sp" />
                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/activity_detail_buttons_layout"
                    android:layout_below="@id/activity_detail_content_card"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/rounded_accent_border"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:id="@+id/activity_detail_overview_navigate_layout"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="@drawable/rounded_accent_left" />

                            <RelativeLayout
                                android:id="@+id/activity_detail_credits_navigate_layout"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/rounded_accent_border"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1">

                                <TextView
                                    android:id="@+id/activity_detail_overview_navigate_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:fontFamily="@font/roboto"
                                    android:text="Overview"
                                    android:textColor="@color/white" />

                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1">

                                <TextView
                                    android:id="@+id/activity_detail_credits_navigate_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:fontFamily="@font/roboto"
                                    android:text="Credits"
                                    android:textColor="@color/colorAccent" />

                            </RelativeLayout>

                        </LinearLayout>

                    </RelativeLayout>


                    <include layout="@layout/content_detail_overview" />

                    <include layout="@layout/content_detail_credits" />

                </LinearLayout>


            </RelativeLayout>

        </ScrollView>

    </io.codetail.widget.RevealFrameLayout>


</android.support.design.widget.CoordinatorLayout>